Fix timeline icon spacing overlap

--- a/assets/css/custom.style.css
+++ b/assets/css/custom.style.css
@@ -2479,14 +2479,14 @@ img {
 [class~=about-section] [class~=timeline] [class~=timeline-item]:nth-child(odd) {
   margin-left: 50%;
   text-align: left;
-  padding-left: 30pt;
+  padding-left: 50pt;
   padding-right: 0;
 }
 
 [class~=about-section] [class~=timeline] [class~=timeline-item]:nth-child(even) {
   margin-left: 0;
   text-align: right;
-  padding-right: 30pt;
+  padding-right: 50pt;
   padding-left: 0;
 }
 
